...
    <string name="location_disablec">Location not enabled. Try to check location settings</string>
    <string name="location_not_found">Location not found. Please refresh your location</string>
    <string name="location_permission_denied">Location permission must be granted to get your location</string>
    <string name="location_permission_granted">You can share your location now</string>
    <string name="login">Login</string>
    <string name="login_success">Login Success!</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure to logout?</string>
    <string name="logout_success">Logout Success!</string>
    <string name="maps">Maps</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="no_location">No Location</string>
...
    <string name="retry">Retry</string>
    <string name="share_your_location">Share your Location</string>
    <string name="show_markers_fail">Failed to show posts coordinate</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="update">Update</string>
    <string name="upload_post">Upload Post</string>
    <string name="yes">Yes</string>
</resources>
